2022-10-21T00:37:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3293929633 # 548
* notice: last 14d: unq all: 38 5724
* notice: prev accum: outdated-unq outdated-all / unq all: 1114 74258 / 1182 79909
* notice: next accum: outdated-unq outdated-all / unq all: 1115 74660 / 1182 80384
* notice: prev exec diff / last date diff / accum: unq all: +0 +147 -0 -10 / +2 +403 -0 -0 / 2 403
* notice: removed / changed dates: [2022-10-06] / [2022-10-07 2022-10-20]

2022-10-20T16:14:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3291216485 # 547
* notice: last 14d: unq all: 38 5651
* notice: prev accum: outdated-unq outdated-all / unq all: 1114 74258 / 1182 79933
* notice: next accum: outdated-unq outdated-all / unq all: 1114 74258 / 1182 79909
* notice: prev exec diff / last date diff / accum: unq all: +0 +118 -0 -142 / +2 +256 -0 -0 / 2 256
* notice: removed / changed dates: [] / [2022-10-06 2022-10-20]

2022-10-20T08:09:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3287889986 # 546
* notice: last 14d: unq all: 38 5675
* notice: prev accum: outdated-unq outdated-all / unq all: 1114 74258 / 1180 79974
* notice: next accum: outdated-unq outdated-all / unq all: 1114 74258 / 1182 79933
* notice: prev exec diff / last date diff / accum: unq all: +2 +138 -0 -179 / +2 +138 -0 -0 / 2 138
* notice: removed / changed dates: [] / [2022-10-06 2022-10-20]

2022-10-20T00:39:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3285990460 # 545
* notice: last 14d: unq all: 38 5716
* notice: prev accum: outdated-unq outdated-all / unq all: 1113 73856 / 1180 79506
* notice: next accum: outdated-unq outdated-all / unq all: 1114 74258 / 1180 79974
* notice: prev exec diff / last date diff / accum: unq all: +0 +146 -0 -17 / +2 +400 -0 -0 / 2 400