@@ -1,10 +1,10 @@
 {
-  "count": 5724,
+  "count": 5676,
   "uniques": 38,
   "clones": [
     {
       "timestamp": "2022-10-07T00:00:00Z",
-      "count": 393,
+      "count": 208,
       "uniques": 1
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-10-20T00:00:00Z",
       "count": 403,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-21T00:00:00Z",
+      "count": 137,
+      "uniques": 1
     }
   ]
 }
