@@ -1,3 +1,11 @@
+2022-10-21T08:09:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3295825579 # 549
+* notice: last 14d: unq all: 38 5676
+* notice: prev accum: outdated-unq outdated-all / unq all: 1115 74660 / 1182 80384
+* notice: next accum: outdated-unq outdated-all / unq all: 1115 74660 / 1183 80336
+* notice: prev exec diff / last date diff / accum: unq all: +1 +137 -0 -185 / +1 +137 -0 -0 / 1 137
+* notice: removed / changed dates: [] / [2022-10-07 2022-10-21]
+
 2022-10-21T00:37:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3293929633 # 548
 * notice: last 14d: unq all: 38 5724
